--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,10 +15,13 @@ website:
         href: presentation.qmd
       - text: "Report"
         href: report.qmd
+      - text: "Shiny web application"
+        href: shiny_web_app.qmd
       - text: "Appendices"
         href: appendices.qmd
       - text: "About"
         href: about.qmd
+
 
 format:
   html:
